--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-PORT=3000
-DB_FILE=./database/task-tracker.db
+PORT=5432
+DATABASE_URL=postgresql://tasktracker_db_dh8q_user:AGjnjz3Ic23jtSvxNTRYFpyeoTOU9OkE@dpg-d4n8ru8gjchc73btrm8g-a/tasktracker_db_dh8q
